# snort_2.2.0

./: ChangeLog  Makefile.am  Makefile.in  README.md  RELEASE.NOTES  config.h.in  configure  configure.in  snort.8  verstuff.pl
contrib/: Makefile.am  Makefile.in  README  S99snort  address_config.sh  faq2html  ms_unicode_generator.c  mysql.php3  perfstats.c  pgsql.php3  regen-sidmap  sid-add  snort-sort.pl  snort2html.pl  snort_stat.pl  snortlog  snortpp.c
contrib/rpm/: CHANGES.rpms  README.build_rpms  README.rpms  generate-all-rpms  snort.logrotate  snort.org.spec  snort.sysconfig  snortd
doc/: CREDITS  FAQ  Makefile.am  Makefile.in  README  README.WIN32  README.asn1  README.http_inspect  RULES.todo  TODO  USAGE  snort_manual.tex
doc/signatures/: 1000.txt  1001.txt  1002.txt  1003.txt  1004.txt  1005.txt  1007.txt  1008.txt  1009.txt  1010.txt  1011.txt  1012.txt  1013.txt  1015.txt  1016.txt  1017.txt  1018.txt  1019.txt  1020.txt  1021.txt  1022.txt  1023.txt  1024.txt  1025.txt  1026.txt  1027.txt  1028.txt  1029.txt  103.txt  1030.txt  1031.txt  1032.txt  1033.txt  1034.txt  1035.txt  1036.txt  1037.txt  1038.txt  1039.txt  104.txt  (+2296 more)
etc/: sid  sid-msg.map  snort.conf
rules/: attack-responses.rules  backdoor.rules  bad-traffic.rules  chat.rules  ddos.rules  deleted.rules  dns.rules  dos.rules  experimental.rules  exploit.rules  finger.rules  ftp.rules  icmp-info.rules  icmp.rules  imap.rules  info.rules  local.rules  misc.rules  multimedia.rules  mysql.rules  netbios.rules  nntp.rules  oracle.rules  other-ids.rules  p2p.rules  policy.rules  pop2.rules  pop3.rules  rpc.rules  rservices.rules  scan.rules  shellcode.rules  smtp.rules  snmp.rules  sql.rules  telnet.rules  tftp.rules  virus.rules  web-attacks.rules  web-cgi.rules  (+7 more)
src/: Makefile.am  Makefile.in  byte_extract.c  checksum.h  codes.c  codes.h  debug.c  debug.h  decode.c  decode.h  detect.c  detect.h  event.h  event_queue.c  event_queue.h  event_wrapper.c  fatal.h  fpcreate.c  fpcreate.h  fpdetect.c  fpdetect.h  generators.h  log.c  log.h  mempool.c  mempool.h  mstring.c  mstring.h  parser.c  parser.h  pcrm.c  pcrm.h  plugbase.c  plugbase.h  plugin_enum.h  prototypes.h  rules.h  sf_sdlist.c  sf_sdlist.h  sfthreshold.c  (+17 more)
templates/: Makefile.in
(+118 files in other folders)
