## $Id: Makefile.am,v 1.7 2004/06/28 18:21:16 bmc Exp $
AUTOMAKE_OPTIONS=foreign no-dependencies

EXTRA_DIST = ACID-0.9.6b21.tar.gz \
address_config.sh \
create_mssql \
create_mysql \
create_oracle.sql \
create_postgresql \
faq2html \
Guardian.tar.gz \
Makefile.am \
ms_unicode_generator.c \
perfstats.c \
mysql.php3 \
Net-SnortLog-0.1.tar.gz \
passiveOS.tar.gz \
pgsql.php3 \
README \
regen-sidmap \
S99snort \
sid-add \
snort2html.pl \
snortdb-extra.gz \
snortlog \
snortnet.tar.gz \
snortpp.c \
snort-sort.pl \
snort_stat.pl \
snortwatch-0.7.tar.gz \
Spade-092200.1.tar.gz \
rpm/CHANGES.rpms \
rpm/generate-all-rpms \
rpm/README.build_rpms \
rpm/README.rpms \
rpm/RPM-TODO \
rpm/snortd \
rpm/snort.logrotate \
rpm/snort.org.spec \
rpm/snort.sysconfig
